syntax = "proto3";
option go_package = "github.com/cs301-itsa/project-2023-24t1-project-2023-24t1-g2-t1/authentication";

import "google/api/annotations.proto";

message RegisterRequest {
    string company = 1;
    string email = 2;
    string firstName = 3;
    string lastName = 4;
    string birthdate = 5;
    string password = 6;
}

message RegisterResponse {
    string email = 1;
    string message = 2;
    string verificationKey = 3;
}

message VerifyEmailRequest {
    string verificationKey = 1;
    string otp = 2;
    string email = 3;
}

message VerifyEmailResponse {
    string status = 1;
    string details = 2;
    string email = 3;
}

message LoginRequest {
    string company = 1;
    string email = 2;
    string password = 3;
}

message LoginResponse {
    string status = 1;
    string idToken = 2;
}

message NewOTPRequest {
    string company = 1;
    string email = 2;
}

message NewOTPResponse {
    string message = 1;
    string verificationKey = 2;
}

message ValidTokenRequest {
    string verificationKey = 1;
    string otp = 2;
    string email = 3;
}

message ValidTokenResponse {
    string message = 1;
    string token = 2;
}

message ChangePasswordRequest {
    string token = 1;
    string company = 2;
    string email = 3;
    string password = 4;
}

message ChangePasswordResponse {
    string status = 1;
    string details = 2;
    string email = 3;
}

service Authentication {
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/register"
            body: "*"
        };
    }
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            post: "/verify-email"
            body: "*"
        };
    }
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/login"
            body: "*"
        };
    }
    rpc NewOTP(NewOTPRequest) returns (NewOTPResponse) {
        option (google.api.http) = {
            post: "/otp"
            body: "*"
        };
    }
    rpc ValidToken(ValidTokenRequest) returns (ValidTokenResponse) {
        option (google.api.http) = {
            post: "/valid-token"
            body: "*"
        };
    }
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
        option (google.api.http) = {
            post: "/change-password"
            body: "*"
        };
    }
}