syntax = "proto3";
option go_package = "github.com/cs301-itsa/project-2023-24t1-project-2023-24t1-g2-t1/otp";

import "google/api/annotations.proto";

message OTPRequest {
    string email = 1;
}

message OTPResponse {
    string verificationKey = 1;
    string message = 2;
}

message VerifyOTPRequest {
    string verificationKey = 1;
    string otp = 2;
    string email = 3;
}

message VerifyOTPResponse {
    string status = 1;
    string details = 2;
    string email = 3;
}

service OTP {
    rpc GetOTP(OTPRequest) returns (OTPResponse) {
        option (google.api.http) = {
            post: "/v1/email/otp"
            body: "*"
        };
    }
    rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse) {
        option (google.api.http) = {
            post: "/v1/email/verify"
            body: "*"
        };
    }
}